2009-01-25	Jannis Pohlmann <jannis@xfce.org>

	* == 4.5.99.1 released! ==
	* NEWS: Update NEWS file for the release.
	* configure.in.in: Bump version number and dependencies.

2009-01-14	Jannis Pohlmann <jannis@xfce.org>

	* configure.in.in: Post-release version bump.

2009-01-11	Jannis Pohlmann <jannis@xfce.org>

	* == 4.5.93 released! ==
	* configure.in.in: Bump version and dependencies and a remove 'svn'
	  version tag.

2009-01-11	Jannis Pohlmann <jannis@xfce.org>

	* NEWS: Update NEWS for the upcoming 4.5.93 release.

2009-01-11	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-volume-button.c: Change step size to 5% instead
	  of 1% because 1% is unusable if you don't have a laptop with a nice
	  touchpad. I'll have to come up with a more intelligent solution for
	  that in the next release, I guess.

2009-01-08	Jannis Pohlmann <jannis@xfce.org>

	* xfce4-mixer/main.c: Use multimedia-volume-control instead of
	  xfce4-mixer icon for all windows.

2008-12-10	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-mixer-plugin.c: Another string improvement
	  (hopefully).

2008-12-10	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-mixer-plugin.c, panel-plugin/xfce-plugin-dialog.c,
	  xfce4-mixer/main.c, xfce4-mixer/xfce-mixer.c: Try to improve strings
	  even further in reply to Brian's comments.

2008-12-10	Josh Saddler <nightmorph@gentoo.org>

	* panel-plugin/xfce-mixer-plugin.c, panel-plugin/xfce-plugin-dialog.c,
	  xfce4-mixer/xfce-mixer-controls-dialog.c,
	  xfce4-mixer/xfce-mixer-window.c, xfce4-mixer/xfce-mixer.c: Improve
	  strings as part of the string review process.

2008-11-11	Jannis Pohlmann <jannis@xfce.org>

	* == 4.5.92 released ==
	* configure.in.in: Bump version. Update dependencies.

2008-11-11	Jannis Pohlmann <jannis@xfce.org>

	* po/POTFILES.in: Remove xfce-mixer-stock.{c,h}.

2008-11-11	Jannis Pohlmann <jannis@xfce.org>

	* NEWS: Update NEWS file for the upcoming beta2 release.

2008-11-06	Jannis Pohlmann <jannis@xfce.org>
